--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@iconify/icons-material-symbols": "^1.2.32",
     "@iconify/svelte": "^3.1.0",
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "svelte": "^3.55.1",
