Insstalled a media duration to time converter npm package and implemented it in the playPause js file

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "svelte": "^3.55.1",
     "svelte-preprocess": "^5.0.1",
     "vite": "^4.1.0"
+  },
+  "dependencies": {
+    "duration-time-conversion": "^1.0.6"
   }
 }
